Switch from grid to flex because of unexpected overflow issues

--- a/src/app/components/donations/donation/donation.component.scss
+++ b/src/app/components/donations/donation/donation.component.scss
@@ -1,5 +1,7 @@
 :host {
-  display: grid;
-  grid-template-rows: auto 1fr;
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding-block: 1.5rem;
 }
